--- a/5-magic/index.qmd
+++ b/5-magic/index.qmd
@@ -1,13 +1,13 @@
 ---
-title: <span style="color:white">The Evolution of LeBron's Shot Choices (2003–2024)</span>
-subtitle: "How the King’s shot selection mirrors the NBA’s transformation"
+title: <span style="color:white">The Invisible Hand of Greatness</span>
+subtitle: "How Magic Johnson proved that leadership is about what you give, not what you take"
 
 author: 
 - name: "King Matayo"
   email: kingmatayo.thefirst@gmail.com
-date: 12/07/2024
+date: 12/16/2024
 
-title-block-banner: ./assets/lebron-collage.jpg
+title-block-banner: ./assets/magic.jpg
 title-block-banner-color: "black"
 
 format: html
@@ -42,201 +42,68 @@ library(viridis)
 # Source functions
 source(file="./R/00-functions.R")
 
-# Read csv file with all NBA shots data from 2003 to 2024
-all_shots <- read.csv("./data/allshots-2003-2024.csv")
 
 ```
 
-# A rookie’s first shot
+# The Magical Rookie
 
-In my experience, the simplest decisions often reveal the most about who we are, at any given point in time.
+In the spring of 1980, a 20-year-old rookie stepped onto the court for Game 6 of the NBA Finals. The Los Angeles Lakers’ towering star, Kareem Abdul-Jabbar, was injured, and everyone assumed that without him, the team’s championship hopes were gone. The rookie—listed at 6’9” and known for playing point guard—was asked to play center.
 
-On October 29, 2003, 18-year-old LeBron James made his first shot decision as an NBA player. It wasn’t a flashy dunk or a deep three. It was a mid-range jumper - plain, efficient, unremarkable. Two points.
+What happened next is the stuff of legend.
 
-::: column-margin
-[LeBron's 1st NBA Game: October 29, 2003](https://youtu.be/JLjH0rrNFeU?si=R5YavOwTrWUNfcZ2){target="_blank"}
-:::
+Magic Johnson didn’t just fill in; he flourished. He scored 42 points, grabbed 15 rebounds, and dished out 7 assists. The Lakers won the championship that night, but it wasn’t Magic’s stats that stood out. It was something harder to quantify: the calm confidence he inspired in his teammates. The belief that, together, they could handle anything.
 
-But that single shot spoke volumes. It told us what basketball was in 2003: a game that valued size and strength, rewarded mid-range specialists, and treated the three-point line as an occasional luxury.
+This wasn’t a one-off performance. It was a window into Magic’s entire approach to basketball—and life. Leadership, he showed us, isn’t about being the loudest or most dominant. It’s about creating space for others to thrive. It’s about knowing when to shine and when to let someone else take the shot.
 
-Fast forward 20 years, and that same decision would look out of place. Today’s NBA is unrecognizable. Three-pointers aren’t just common - they’re necessary. Mid-range shots are now basketball’s version of a landline phone: technically still around, but rarely used.
+# The Smile That Changed a Team
 
-::: column-margin
-[LeBron, 20 years later: October 29, 2023](https://youtu.be/7-q0NDE-_bw?si=mcOFaFomUdgVMu6w){target="_blank"}
-:::
+Leadership doesn’t always come from authority. Sometimes it comes from a smile.
 
-LeBron’s first shot wasn’t just the start of his career. It was a snapshot of a moment in time. And what’s fascinating is how his evolution mirrors the evolution of the league itself. His choices on the court became a masterclass in adaptation.
+Magic Johnson’s smile wasn’t just a trademark—it was a strategy. He played with a joy that was contagious, a confidence that spread like wildfire. A teammate misses a shot? Magic is the first to slap them on the back and tell them to shake it off. The team is down by 10? Magic is the one rallying the huddle, convincing everyone that they’re one good run away from taking control.
 
-This is the story of how LeBron’s shot selection changed over two decades, and how those choices reflect the shifting forces that reshaped the game of basketball.
+In 1980, the Lakers were a talented but inconsistent team. Kareem was their anchor, but the spark of optimism and cohesion came from their rookie point guard. Magic’s charisma wasn’t a distraction; it was a glue that held the team together when things got tough.
 
-::: {.panel-tabset .nav-pills}
-## LeBron's first NBA game chart
+He led with positivity, not power, and his teammates fed off that energy. Years later, players who shared the court with him wouldn’t just talk about his skill—they’d talk about how much fun he made the game.
 
-```{r warning=FALSE, message=FALSE}
-# Creating a basic shot chart for Lebron's 1st NBA shot
+# Making the Team Shine
 
-create_shotchart(all_shots,"LeBron James",20031029)
-```
+Great leaders are multipliers. They take what’s already good and make it extraordinary.
 
-## 20 years later
+Magic Johnson’s genius wasn’t just his talent. It was his ability to amplify the talent around him. He wasn’t just looking for the open man—he was creating opportunities that no one else could see.
 
-```{r warning=FALSE, message=FALSE}
-create_shotchart(all_shots,"LeBron James",20231029)
-```
+Take his partnership with Kareem Abdul-Jabbar. Kareem was already one of the greatest centers in history. But with Magic on the floor, feeding him perfect passes at just the right time, Kareem became unstoppable. Magic wasn’t trying to overshadow Kareem; he was trying to make him even greater.
 
-## Comparison: 2003 vs 2023
+But it wasn’t just about stars. Role players flourished under Magic’s leadership. Michael Cooper, James Worthy, and even players further down the roster found themselves part of plays that made them look like superstars.
 
-```{r warning=FALSE, message=FALSE}
-# Generate's Lebron's slope chart with the slope chart generating function created
-base_lebron_slope_chart <- shots_game_by_game_slope_chart(all_shots,"LeBron James",20031029,20231029)
+Magic understood a simple truth: success is more satisfying when everyone gets a piece of it.
 
-# Style it abit
-base_lebron_slope_chart +
-  scale_x_discrete(labels = c("20031029" = "October 29, 2003", "20231029" = "October 29, 2023")) + 
-  labs(
-    title = "LeBron's shot choices: Oct. 29, 2003 vs. 2023",
-    subtitle = "His 3PT attempts went up from 5% to 42% of all shot choices",
-    x = "",
-    y = "% of shots") +
-  theme_minimal() +
-  theme(
-    text = element_text(size = 14),
-    legend.position = "none",  # Remove the legend
-    plot.title = element_text(size = 14, face = "bold"),
-    plot.subtitle = element_text(size = 10)
-  )
-```
-:::
+*Analysis Placeholder: A breakdown of Magic’s assist-to-turnover ratio shows just how effectively he created opportunities while minimizing risks for his team.*
 
-...
+# When the Moment Called, He Delivered
 
-# 2003-2008: The power of playing to your strengths
+Pressure doesn’t build character; it reveals it.
 
-In LeBron’s early years, the game was simple: get to the basket.
+In that iconic 1980 Finals game, Magic didn’t have the luxury of sticking to what he knew best. His team needed him to play a position he wasn’t trained for, against players bigger and stronger than him.
 
-He was faster, stronger, and more athletic than most players on the court. Why take a risky three-pointer when you could bulldoze your way to the rim? Over 40% of his shots came from the paint, where he was nearly unstoppable.
+Instead of resisting, he embraced the challenge. Magic didn’t just perform well—he turned in one of the greatest performances in NBA history. But here’s the thing: he didn’t win that game by trying to be someone he wasn’t. Even playing as a center, he remained the same selfless player who prioritized his team over himself.
 
-The mid-range jumper - like the one he made in his first game - was his secondary weapon. And it worked because it fit the league’s style. Coaches weren’t chasing efficiency metrics yet. The paint and mid-range were where championships were won.
+*Analysis Placeholder: A comparison of Magic’s performance as a guard versus that iconic game as a center highlights his versatility and team-first mindset.*
 
-LeBron wasn’t just playing basketball. He was thriving in a system built for players like him. The lesson? Success often comes from maximizing what works in the moment, even if it won’t last forever.
+# The Invisible Hand of Leadership
 
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
+Magic Johnson wasn’t perfect. He made mistakes, turned the ball over, and had off nights like anyone else. But his leadership endured because it wasn’t about being perfect—it was about being consistent.
 
-# Since this is time-series data - use a custom function to create a line chart - as i did before, but this time make it animated with gganimate
+The Lakers weren’t just better when Magic was on the floor. They were more cohesive, more confident, and more resilient.
 
-base_lebron_linechart_03_08 <- create_linechart(all_shots,"LeBron James",2003,2008)
+The numbers back this up:
 
-lebron_linechart_03_08_v2 <- base_lebron_linechart_03_08 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2003-08)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+*Analysis Placeholder: The Lakers’ offensive efficiency soared with Magic in the lineup, underscoring his impact as a leader and playmaker.*
 
-# Save the animation
-# anim_save("./assets/lebron_linechart_03_08_v2.gif", lebron_linechart_03_08_v2)
+But Magic’s real legacy isn’t just in stats or trophies. It’s in the trust he built, the confidence he inspired, and the joy he brought to the game. His career is a masterclass in servant leadership—a lesson that the greatest thing you can achieve is helping others achieve.
 
+Leadership isn’t about demanding loyalty. It’s about earning it. It’s not about taking the most shots; it’s about creating the best ones.
 
-```
-
-![LeBron's shot choices (2003-08) : Over 40% of LeBron’s shots came from the paint, with mid-range jumpers making up the second-largest proportion. Threes were an afterthought, comprising less than 15% of his attempts.](assets/lebron_linechart_03_08_v2.gif)
-
-# 2009-2015: Learning to adapt
-
-By 2009, the NBA was changing. The three-point revolution, sparked by analytics and players like Stephen Curry, was underway. LeBron noticed.
-
-He didn’t immediately abandon the mid-range game - it was still part of his identity - but he started taking more three-pointers. Slowly, deliberately, he added them to his repertoire. By the time he joined the Miami Heat in 2010, and with the influence of teammates like Ray Allen who joined the Heat in 2012, his three-point attempts had grown to 25% of his total shots.
-
-This wasn’t just about skill development. It was about survival. The game was evolving, and players who clung to the old ways risked falling behind.
-
-LeBron’s willingness to adapt showed a crucial insight: the best performers don’t just play their game -they adjust to the rules as they change.
-
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
-base_lebron_linechart_09_15 <- create_linechart(all_shots,"LeBron James",2009,2015)
-
-lebron_linechart_09_15_v2 <- base_lebron_linechart_09_15 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2009-15)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
-# Save the animation
-# anim_save("./assets/lebron_linechart_09_15_v2.gif", lebron_linechart_09_15_v2)
-
-```
-
-![Lebron's shot choices (2009-15) : Three-point attempts grew from 15% to 25% of his total shots. You can see the drastic change between 2012 and 2013 - the years he won 2 championships, back to back.](assets/lebron_linechart_09_15_v2.gif)
-
-# 2016-2024: Embracing the new reality
-
-The modern NBA belongs to the three-pointer, and so does LeBron.
-
-Between 2016 and 2023, over 35% of his shots came from beyond the arc. The mid-range? Almost gone. The paint? Still important, but less dominant than before.
-
-This wasn’t a concession—it was a strategy. LeBron didn’t stop attacking the basket. He just became more selective, choosing to drive when it mattered most and saving his energy for long-range daggers.
-
-The league had fully transitioned to an era of spacing and efficiency. Teams weren’t just tolerating three-pointers—they were building offenses around them. LeBron’s game evolved accordingly.
-
-The takeaway here is simple: the ability to change isn’t a weakness. It’s a competitive advantage
-
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
-
-base_lebron_linechart_16_24 <- create_linechart(all_shots,"LeBron James",2016,2024)
-
-lebron_linechart_16_24_v2 <- base_lebron_linechart_16_24 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2016-24)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
-# Save the animation
-anim_save("./assets/lebron_linechart_16_24_v2.gif", lebron_linechart_16_24_v2)
-
-
-```
-
-![LeBron's shot choices (2016-2024) : The shift isn't just about LeBron. The NBA's average number of three-point attempts per game has more than doubled since his rookie year. The league has transitioned from a post-centric style to a perimeter-oriented game](assets/lebron_linechart_16_24_v2.gif)
-
-# LeBron as a mirror to the NBA
-
-LeBron’s career isn’t just about scoring points. It’s about reflecting the game’s evolution.
-
-The mid-range game, once the foundation of basketball, is now a relic. Analytics proved that long-range shots and finishes at the rim were more valuable, and the league responded. LeBron’s shift from mid-range jumpers to three-pointers wasn’t just personal growth - it was basketball growth.
-
-Consider this: In 2003, NBA teams averaged just 14 three-point attempts per game. By 2023, that number had more than doubled to 35. LeBron adapted not because he wanted to - but because he had to.
-
-The NBA’s greatest players aren’t just defined by their talent. They’re defined by how well they adjust when the rules of the game change.
-
-# What his journey can teach us
-
-LeBron’s evolution is a lesson in adaptability. He started his career mastering the tools of his era. Then, as the game changed, he didn’t resist - he evolved with it.
-
-For players entering the league today, the message is clear: success isn’t just about being great at one thing. It’s about being willing to reinvent yourself when the world around you changes.
-
-LeBron’s journey isn’t just about basketball. It’s about the universal truth that staying relevant requires constant evolution. The game always changes. The question is whether you’ll change with it.
-
-I believe that when its all said and done, LeBron’s legacy won't just about his stats or his championships. It’s about his adaptability.
-
-Over 20 years, he’s played in a league that’s transformed itself multiple times. Each time, LeBron transformed with it, redefining what it means to be great in basketball.
-
-The King’s reign is a testament to one simple idea: if you want to last, you have to evolve.
+Magic Johnson didn’t just play basketball. He played for his team. And in doing so, he taught us that greatness isn’t about being the best—it’s about making everyone else better.
 
 ------------------------------------------------------------------------
 
